# nucleo-h753zi-threadx-demo

./: LICENSE  README.md
STM32Project/: .clang-format  .clangd  .gitignore  CMakeLists.txt  STM32Project.ioc  STM32Project_open_in_VSCode.code-workspace
STM32Project/Application/: CMakeLists.txt  application.cpp
STM32Project/Core/Src/: app_threadx.c  main.c
STM32Project/cmake/: starm-clang.cmake
